force-app/main/default/objects/RDI_Report__c/RDI_Report__c.object-meta.xml
<CustomObject>
    <label>RDI Report</label>
    <nameField>
        <label>Adoptable Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDI Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>