force-app/main/default/objects/RDI_Report__c/fields/Adopted_Count__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Count__c</fullName>
    <label>Adopted Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>