force-app/main/default/objects/RDI_Report__c/fields/Adoption_Days__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Days__c</fullName>
    <label>Adoption Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>