force-app/main/default/objects/RDI_Report__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Future State</fullName>
            </value>
            <value>
                <fullName>Refactored</fullName>
            </value>
            <value>
                <fullName>BO Conversion</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Deprecate</fullName>
            </value>
            <value>
                <fullName>Suppress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>