force-app/main/default/objects/RDI_Report__c/fields/Engaged_Count__c.field-meta.xml
<CustomField>
    <fullName>Engaged_Count__c</fullName>
    <label>Engaged Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>