force-app/main/default/objects/RDI_Report__c/fields/Engagement_Days__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Days__c</fullName>
    <label>Engagement Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>