force-app/main/default/objects/RDI_Report__c/fields/Improvement_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Opportunity__c</fullName>
    <label>Improvement Opportunity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>