force-app/main/default/objects/RDI_Report__c/fields/Last_Access__c.field-meta.xml
<CustomField>
    <fullName>Last_Access__c</fullName>
    <label>Last Access</label>
    <type>Date</type>
</CustomField>