force-app/main/default/objects/RDI_Report__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>if(ISPICKVAL(System__c, &quot;Salesforce&quot;), &quot;https://mcic--crdi.sandbox.lightning.force.com/lightning/r/Report/&quot; &amp;  Record_Id__c &amp; &quot;/view&quot;, &quot;https://mcic--crdi.sandbox.lightning.force.com/lightning/page/analytics?wave__assetType=dashboard&amp;wave__assetId=&quot; &amp;  Record_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Link</label>
    <type>Text</type>
</CustomField>