force-app/main/default/objects/RDI_Report__c/fields/MCIC_Visits__c.field-meta.xml
<CustomField>
    <fullName>MCIC_Visits__c</fullName>
    <label>MCIC Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>