force-app/main/default/objects/RDI_Report__c/fields/Subscriber_Visits__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Visits__c</fullName>
    <label>Subscriber Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>