force-app/main/default/objects/RDI_Report__c/fields/Top_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Top_Consumer__c</fullName>
    <label>Top Consumer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>