force-app/main/default/objects/RDI_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>System__c</columns>
    <columns>Top_Consumer__c</columns>
    <columns>Last_Access__c</columns>
    <columns>MCIC_Visits__c</columns>
    <columns>Subscriber_Visits__c</columns>
    <columns>Disposition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>