force-app/main/default/objects/RDI_Report__c/listViews/All_Reports.listView-meta.xml
<ListView>
    <fullName>All_Reports</fullName>
    <columns>NAME</columns>
    <columns>System__c</columns>
    <columns>Top_Consumer__c</columns>
    <columns>Last_Access__c</columns>
    <columns>MCIC_Visits__c</columns>
    <columns>Subscriber_Visits__c</columns>
    <columns>Disposition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Disposition__c</field>
        <operation>notEqual</operation>
        <value>Suppress</value>
    </filters>
    <label>All Reports</label>
</ListView>